<resources>
    <string name="app_name">Book Store</string>
    <string name="add_new_book">Add a Book</string>
    <!-- Label for category product name -->
    <string name="category_book_name">Book Name</string>
    <!-- Text hint for Product Name field in the editor -->
    <string name="hint_book_name">Name of the Book</string>
    <!-- Text hint for book price field in the editor -->
    <string name="hint_book_price">Book Price</string>
    <string name="genre">Genre</string>
    <string name="price">Price</string>
    <!-- currency $ [CHAR LIMIT=5] -->
    <string name="currency">$</string>
    <string name="quantity">Quantity:</string>
    <!-- Text hint for quantity field in the editor -->
    <string name="hint_quantity">How many in stock</string>
    <!-- how many books in stock (units)-->
    <string name="how_many_books_in_stock">books</string>
    <string name="supplier_category">Supplier</string>
    <!-- Text hint for supplier field in the editor -->
    <string name="hint_supplier">Supplier</string>
    <!-- Text hint for supplier phone number field in the editor -->
    <string name="hint_supplier_phone_number">Supplier Phone Number</string>
    <!-- Label for dropdown menu option if the book's genre is unknown -->
    <string name="genre_unknown">Unknown</string>
    <!-- Label for dropdown menu option for Fiction genre-->
    <string name="genre_fiction">Fiction</string>
    <!-- Label for dropdown menu option for Non-Fiction genre-->
    <string name="genre_non_fiction">Non-Fiction</string>
    <!-- Label for dropdown menu option for Science fiction genre-->
    <string name="genre_science_fiction">Science Fiction</string>
    <!-- Label for dropdown menu option for Action and Adventure genre-->
    <string name="genre_action_and_Adventure">Action and Adventure</string>
    <!-- Label for dropdown menu option for Satire genre-->
    <string name="genre_satire">Satire</string>
    <!-- Label for dropdown menu option for Drama genre-->
    <string name="genre_drama">Drama</string>
    <!-- Label for dropdown menu option for Romance genre-->
    <string name="genre_romance">Romance</string>
    <!-- Label for dropdown menu option for History genre-->
    <string name="genre_history">History</string>
    <!-- Label for dropdown menu option for Poetry genre-->
    <string name="genre_poetry">Poetry</string>
    <!-- Label for dropdown menu option for Tragedy genre-->
    <string name="genre_tragedy">Tragedy</string>
    <string name="insert_data">Insert Dummy Data</string>
    <string name="delete_all_books">Delete All Books</string>
    <!-- Label for editor menu option to save book and leave editor -->
    <string name="action_save">Save</string>
    <!-- Label for editor overflow menu option that deletes the current book  -->
    <string name="action_delete">Delete</string>
    <!-- Toast message in editor when new book has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_successful">Book saved</string>

    <!-- Toast message in editor when new pet has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_failed">Error with saving book</string>
    <string name="sell">Sell</string>

    <!-- Title text for the empty view, which describes the empty dog house image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a book</string>
    <string name="edit_book">Edit Book</string>


    <!-- Toast message in editor when current book was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_successful">Book updated</string>

    <!-- Toast message in editor when current pet has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_failed">Error with updating book</string>


    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current book [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_successful">Book deleted</string>

    <!-- Toast message in editor when current book has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_failed">Error with deleting book</string>

    <!-- Dialog message to ask the user to confirm deleting the current book [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this book?</string>

    <!-- Dialog button text for the option to confirm deleting the current book [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current book [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Dialog button text for the option to confirm deleting all the books [CHAR LIMIT=20] -->
    <string name="delete_all_book_dialog_msg">Delete all books?</string>

    <!-- Label for the book's genre if the genre is unknown [CHAR LIMIT=20] -->
    <string name="unknown_genre">Unknown genre</string>

    <string name="toast_out_of_stock">Out of stock</string>
    <string name="author">Author</string>
    <string name="author_of_the_book">Author of the book</string>
    <string name="book_validation">All the required fields need to be filled.</string>


</resources>
